<resources>
    <string name="app_name">Calculator</string>
    <string name="result">Result</string>
    <string name="Equal">=</string>
    <string name="Decimal">.</string>
    <string name="_0">0</string>
    <string name="Addition">+</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Substraction">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="x">X</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="Divide">÷</string>
    <string name="Mix">+/-</string>
    <string name="leftArrow">←</string>
    <string name="ac">Ac</string>
</resources>
